# rviz_plugin_covariance

./: .travis.yml  CMakeLists.txt  README.md  manifest.xml  package.xml  plugin_description.xml
data/: odom_123.yml  odom_321.yml  odom_identity.yml  odom_rx.yml  odom_x.yml  odom_y.yml  odom_z.yml
scripts/: send_covariance_msgs.py  send_covariance_msgs_2D.py  send_odometry.py  send_test_msgs.py
src/: covariance_display.cpp  covariance_display.h  covariance_property.cpp  covariance_property.h  covariance_visual.cpp  covariance_visual.h  odometry_display.cpp  odometry_display.h  pose_with_covariance_display.cpp  pose_with_covariance_display.h  pose_with_covariance_visual.cpp  pose_with_covariance_visual.h
